# TP-Taller-1

./: .gitignore  Cargo.toml  Makefile  README.md
app/: Cargo.toml
app/config/: broker_config.txt
app/config/aux/: client_pub.txt  client_sub.txt  client_sub_2.txt
app/files/: client.txt  client_pub.txt  client_sub 2.txt  client_sub.txt  client_sub_2.txt  server.txt
app/src/: broker.rs  client_example.rs  client_pub.rs  client_sub.rs  lib.rs  logger.rs  server_example.rs
app/src/common/: file_manager.rs
app/src/common/Protocol/: protocol.rs
app/src/common/protocol/: app_protocol.rs
app/src/shared/: cam.rs  cam_list.rs  coordenates.rs  incident.rs  incident_list.rs
app/src/test/: client.rs  client_sub.rs
broker/: Cargo.toml
broker/config/: broker_auth_data.txt  broker_config.txt  mqtt_server_config.txt
broker/config/aux/: client_sub.txt
broker/src/: authentication.rs  broker.rs  lib.rs
broker/src/test/: client.rs
central_cams_system/: Cargo.toml
central_cams_system/config/: cams_config.txt  cams_system_db  initial_config.txt  mqtt_client_config.txt  system_config.txt
central_cams_system/src/: cams_system.rs  cams_system_config.rs  lib.rs  main.rs  system_interface.rs
central_cams_system/src/vision/: fs_listener.rs  threadpool.rs  vision_ai.rs
drone_app/: Cargo.toml
drone_app/config/: config_drone1.txt  config_drone2.txt  config_drone3.txt  drone_config.txt  drone_config1.txt  drone_config2.txt  drone_config3.txt  drone_config_1.txt  drone_config_2.txt  drone_config_3.txt  drone_config_4.txt  drone_config_5.txt  drone_config_6.txt  drone_config_7.txt  initial_config.txt  initial_config_drone1.txt  initial_config_drone2.txt  initial_config_drone3.txt  mqtt_client_config_1.txt  mqtt_client_config_2.txt  mqtt_client_config_3.txt  mqtt_client_config_4.txt  mqtt_client_config_5.txt  mqtt_client_config_6.txt  mqtt_client_config_7.txt
drone_app/src/: drone.rs  drone_config.rs  lib.rs  main.rs
monitoring_app/: Cargo.toml
monitoring_app/config/: app_config.txt  client_config.txt  historial_db  mqtt_client_config.txt
monitoring_app/src/: app.rs  app_config.rs  app_interface.rs  interface.rs  lib.rs  main.rs  view.rs
monitoring_app/src/controllers/: incident.rs  run.rs
monitoring_app/src/model/: monitoring_app.rs
monitoring_app/src/views/: cams.rs  common.rs  incidents.rs  view.rs
mqtt/: Cargo.toml
mqtt/config/: server_config.txt
mqtt/src/: actions.rs  broker.rs  client.rs  client_example.rs  config.rs  lib.rs  server.rs  server_pool.rs  session.rs  thread_pool.rs
mqtt/src/client/: client_connector.rs  client_listener.rs  client_message.rs  mqtt_client.rs
mqtt/src/common/: authentication.rs  data_types.rs  flags.rs  reason_codes.rs  topic_filter.rs  utils.rs
mqtt/src/config/: client_config.rs  mqtt_config.rs  server_config.rs
mqtt/src/configs/: client_config.rs  server_config.rs
mqtt/src/control_packets/connect/: connect.rs  connect_payload.rs  fixed_header.rs  variable_header.rs
mqtt/src/control_packets/mqtt_auth/: auth.rs  auth_properties.rs
mqtt/src/control_packets/mqtt_connack/: connack.rs  connack_properties.rs  connect_reason_code.rs  fixed_header.rs  variable_header.rs
mqtt/src/control_packets/mqtt_connect/: connect.rs  connect_payload.rs  connect_properties.rs  fixed_header.rs  payload.rs  variable_header.rs  variable_header_properties.rs
mqtt/src/control_packets/mqtt_disconnect/: disconnect.rs  disconnect_properties.rs  variable_header.rs
mqtt/src/control_packets/mqtt_packet/: connect_reason_code.rs  fixed_header.rs  flags.rs  packet.rs  packet_properties.rs  packet_property.rs  reason_codes.rs  variable_header_properties.rs  variable_header_property.rs
mqtt/src/control_packets/mqtt_pingreq/: pingreq.rs
mqtt/src/control_packets/mqtt_pingresp/: pingresp.rs
mqtt/src/control_packets/mqtt_puback/: puback.rs  puback_properties.rs  variable_header.rs
mqtt/src/control_packets/mqtt_publish/: payload.rs  publish.rs  publish_properties.rs  variable_header.rs
mqtt/src/control_packets/mqtt_suback/: suback.rs  suback_properties.rs
mqtt/src/control_packets/mqtt_subscribe/: subscribe.rs  subscribe_properties.rs
mqtt/src/control_packets/mqtt_unsuback/: unsuback.rs  unsuback_properties.rs
mqtt/src/control_packets/mqtt_unsubscribe/: unsubscribe.rs  unsubscribe_properties.rs
mqtt/src/data_structures/: data_types.rs
mqtt/src/logger/: actions.rs  client_actions.rs  logger.rs  logger_handler.rs  server_actions.rs
mqtt/src/logging/: actions.rs  client_actions.rs  server_actions.rs
mqtt/src/mqtt_packets/: packet.rs  packet_properties.rs  packet_property.rs
mqtt/src/mqtt_packets/headers/: fixed_header.rs  variable_header_properties.rs
mqtt/src/mqtt_packets/packets/: auth.rs  connack.rs  connect.rs  pingreq.rs  (+8 more)
mqtt/src/server/: acknowledge_handler.rs  mqtt_server.rs  server_connector.rs  server_handlers.rs  server_network.rs  server_pool.rs  server_register.rs  server_session.rs  will_message.rs
mqtt/tests/: integration_packets.rs  integration_protocol.rs
mqtt/tests/config/: app_1_config.txt  app_2_config.txt  client_1_config.txt  client_2_config.txt  server_config.txt
mqtt/tests/files/: register_test_1.db  register_test_2.db  register_test_3.db  register_test_4.db
shared/: Cargo.toml
shared/src/: app_topics.rs  lib.rs  utils.rs  will_message.rs
shared/src/controllers/: cam.rs  incident.rs
shared/src/interfaces/: cam_interface.rs  drone_interface.rs  global_interface.rs  incident_interface.rs  map_interface.rs
shared/src/model/: incident_interface.rs
shared/src/models/: coordenates.rs
shared/src/views/: cams.rs  common.rs  dialog_alert.rs  icon.rs  incidents.rs
(+60 files in other folders)
