[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mqtt = { path = "../mqtt" }
chrono = "0.4.38"

[[bin]]
name = "client"
path = "src/client_example.rs"

[[bin]]
name = "server"
path = "src/server_example.rs"
