[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mqtt = { path = "../mqtt" }

[[bin]]
name = "publisher"
path = "src/client_pub.rs"

[[bin]]
name = "subscriber"
path = "src/client_sub.rs"
