[package]
name = "broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mqtt = { path = "../mqtt" }

[[bin]]
name = "broker"
path = "src/broker.rs"

[[bin]]
name = "client_test"
path = "src/test/client.rs"
