[package]
name = "central_cams_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mqtt = { path = "../mqtt" }
shared = { path = "../shared" }
logger = { path = "../logger" }

[[bin]]
name = "cams_system"
path = "src/main.rs"
