[package]
name = "central_cams_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mqtt = { path = "../mqtt" }
shared = { path = "../shared" }
logger = { path = "../logger" }

walkers = "0.22.0"

notify = "5"
reqwest = { version = "0.11", features = ["blocking", "json"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[[bin]]
name = "cams_system"
path = "src/main.rs"
