[package]
name = "drone_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

mqtt = { path = "../mqtt" }
shared = { path = "../shared" }
logger = { path = "../logger" }

walkers = "0.22.0"

[[bin]]
name = "drone"
path = "src/main.rs"
