[package]
name = "monitoring_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mqtt = { path = "../mqtt" }
shared = { path = "../shared" }

eframe = "0.27.2"
egui = "0.27.2"
walkers = "0.22.0"
egui_extras = { version = "0.27.2", features = ["all_loaders"] }
image = "0.25.1"

[[bin]]
name = "monitoring_app"
path = "src/main.rs"