[package]
name = "mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app" }

[lib]
name = "mqtt"
path = "src/lib.rs"

[[bin]]
name = "broker"
path = "src/broker.rs"

[[bin]]
name = "client"
path = "src/client_example.rs"