[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mqtt = { path = "../mqtt" }
logger = { path = "../logger"}

rand = "0.8.4"
chrono = "0.4.19"
image = "0.25.1"
eframe = "0.27.2"
walkers = "0.22.0"
egui_extras = "0.27.2"
egui = "0.27.2"

[lib]
name = "shared"
path = "src/lib.rs"